# advanced_multiloops

./: CMakeLists.txt  README.md
data_set/: domaind_only_cleaned.ctset  training_large.ctset  training_small.ctset
data_set/ct_files/: all_cts  tRNA_tdbD00000002.ct  tRNA_tdbD00000003.ct  tRNA_tdbD00000004.ct  tRNA_tdbD00000005.ct  tRNA_tdbD00000006.ct  tRNA_tdbD00000007.ct  tRNA_tdbD00000008.ct  tRNA_tdbD00000009.ct  tRNA_tdbD00000010.ct  tRNA_tdbD00000011.ct  tRNA_tdbD00000012.ct  tRNA_tdbD00000013.ct  tRNA_tdbD00000014.ct  tRNA_tdbD00000015.ct  tRNA_tdbD00000016.ct  tRNA_tdbD00000017.ct  tRNA_tdbD00000018.ct  tRNA_tdbD00000019.ct  tRNA_tdbD00000020.ct  tRNA_tdbD00000021.ct  tRNA_tdbD00000022.ct  tRNA_tdbD00000023.ct  tRNA_tdbD00000024.ct  tRNA_tdbD00000025.ct  tRNA_tdbD00000026.ct  tRNA_tdbD00000027.ct  tRNA_tdbD00000028.ct  tRNA_tdbD00000029.ct  tRNA_tdbD00000030.ct  tRNA_tdbD00000031.ct  tRNA_tdbD00000032.ct  tRNA_tdbD00000033.ct  tRNA_tdbD00000034.ct  tRNA_tdbD00000035.ct  tRNA_tdbD00000036.ct  tRNA_tdbD00000037.ct  tRNA_tdbD00000038.ct  tRNA_tdbD00000039.ct  tRNA_tdbD00000040.ct  (+9206 more)
librnary/: CMakeLists.txt
librnary/include/: aalberts_folder.hpp  aalberts_scorer.hpp  asymmetry_folder.hpp  asymmetry_model.hpp  asymmetry_scorer.hpp  average_asym_folder.hpp  average_asym_model.hpp  average_asym_scorer.hpp  brute_folder.hpp  energy.hpp  multi_array.hpp  multi_loop.hpp  nn_affine_model.hpp  nn_model.hpp  nn_scorer.hpp  nn_unpaired_folder.hpp  nussinov_folder.hpp  parallel.hpp  primary_structure.hpp  pseudoknot_removal.hpp  read_cts.hpp  rna_structure.hpp  secondary_structure.hpp  ss_enumeration.hpp  ss_tree.hpp  statistics.hpp  upbr_folder.hpp  vector_types.hpp
librnary/include/folders/: aalberts_folder.hpp  average_asym_folder.hpp  brute_folder.hpp  nn_affine_folder.hpp  nn_unpaired_folder.hpp  nussinov_folder.hpp  upbr_folder.hpp
librnary/include/models/: aalberts_model.hpp  average_asym_model.hpp  nn_affine_model.hpp  nn_model.hpp  nn_unpaired_model.hpp
librnary/include/scorers/: aalberts_scorer.hpp  asymmetry_scorer.hpp  average_asym_scorer.hpp  nn_scorer.hpp
librnary/include/training/: IBF_multiloop.hpp  IBF_multiloop_aalberts.hpp
librnary/lib/RNAstructure/: algorithm.cpp  arrayclass.cpp  rna_library.cpp  rna_library.h  structure.cpp  structure.h
librnary/src/: aalberts_folder.cpp  aalberts_model.cpp  asymmetry_folder.cpp  asymmtery_model.cpp  average_asym_folder.cpp  average_asym_model.cpp  energy.cpp  multi_loop.cpp  nn_affine_model.cpp  nn_model.cpp  nn_unpaired_folder.cpp  nn_unpaired_model.cpp  nussinov_folder.cpp  primary_structure.cpp  pseudoknot_removal.cpp  read_cts.cpp  rna_structure.cpp  secondary_structure.cpp  ss_enumeration.cpp  ss_tree.cpp  statistics.cpp  upbr_folder.cpp
librnary/src/folders/: aalberts_folder.cpp  average_asym_folder.cpp  nn_affine_folder.cpp  nn_unpaired_folder.cpp  nussinov_folder.cpp  upbr_folder.cpp
librnary/src/models/: aalberts_model.cpp  average_asym_model.cpp  nn_affine_model.cpp  nn_model.cpp  nn_unpaired_model.cpp
librnary/src/scorers/: aalberts_scorer.cpp
programs/: CMakeLists.txt
programs/lib/: cxxopts.hpp
programs/src/: an_efn.cpp  an_fold.cpp  linear_efn.cpp  linear_fold.cpp  logarithmic_efn.cpp  logarithmic_fold.cpp  train_an.cpp  train_linear.cpp  train_logarithmic.cpp
results/folds_with_optimized_params/: AN_optimized_params  logarithmic_optimized_params
results/predictions/: an  logarithmic
results/stats_with_slippage/adjusted_predictions/: an  linear  logarithmic
results/stats_with_slippage/an_vs_linear/: 16s  23s  5s  RNaseP  grp1  srp  tRNA  tmRNA
results/stats_with_slippage/an_vs_logarithmic/: 16s  23s  5s  RNaseP  grp1  srp  tRNA  tmRNA
results/stats_with_slippage/linear_vs_an/: 16s  23s  5s  RNaseP  grp1  srp  tRNA  tmRNA
results/stats_with_slippage/linear_vs_logarithmic/: 16s  23s  5s  RNaseP  grp1  grp2  srp  tRNA  telomerase  tmRNA
results/stats_with_slippage/logarithmic_vs_linear/: 16s  23s  5s  RNaseP  grp1  grp2  srp  tRNA  telomerase  tmRNA
results/stats_with_slippage/normalstats_vs_slippage/aalberts_nandagopal/: 16s  23s  5s  RNaseP  grp1  srp  tRNA  tmRNA
results/stats_with_slippage/normalstats_vs_slippage/linear/: 16s  23s  5s  RNaseP  grp1  grp2  srp  tRNA  telomerase  tmRNA
results/stats_with_slippage/normalstats_vs_slippage/logarithmic/: 16s  23s  5s  RNaseP  grp1  grp2  srp  tRNA  telomerase  tmRNA
results/stats_without_slippage/an_vs_linear/: 16s  23s  5s  RNaseP  grp1  srp  tRNA  tmRNA
results/stats_without_slippage/an_vs_log/: 16s  23s  5s  RNaseP  grp1  srp  tRNA  tmRNA
results/stats_without_slippage/an_vs_logarithmic/: 16s  23s  5s  RNaseP  grp1  srp  tRNA  tmRNA
results/stats_without_slippage/logarithmic_vs_linear/: 16s  23s  5s  RNaseP  grp1  grp2  srp  tRNA  telomerase  tmRNA
results/stats_without_slippage/predictions/: an  linear  logarithmic
